# UCM-GDC-S25

./: .gitignore  CMakeLists.txt  README.md  game.tscn  icon.svg.import  mingw_toolchain.cmake  output.sh  output.txt  player.tscn  project.godot
assets/maps/: demo.tmx  prototype-level.tmx  test_map.txt  test_map_surfaces.txt  test_map_trapdoors.txt
assets/sprites/: arcanist.png.import  roguelikecreatures.png.url
assets/tilesets/: redshifted-misc.tsx  redshifted-nature.tsx  redshifted.tsx
src/: character.cpp  main.cpp
src/game/: collisions_defs.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  fireball.cpp  fireball.h  geezer.cpp  geezer.h  movement_attack_animated.cpp  movement_attack_animated.h  player.cpp  player.h
src/utils/: audio.cpp  audio.h  character.h  collisions_defs.h  direction.h  input.cpp  input.h  spritesheet.cpp  spritesheet.h  tilemap.cpp  tilemap.h  tmx_parser.cpp  tmx_parser.h
